# t8blog

./: .dockerignore  .env  Cargo.toml  Dockerfile  README.md  compose.yml  docker-compose.yml
configuration/: base.yml
migrations/: 20220711153129_create_tables.sql  20220825111539_create_tables.sql
scripts/: init_db.sh
src/: configuration.rs  main.rs  startup.rs  telemetry.rs
src/routes/: mod.rs  users.rs
src/routes/users/: mod.rs  post.rs
tests/api/: helpers.rs  users.rs
