[package]
name = "t8blog"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "t8blog"
path = "src/main.rs"

[dependencies]
actix-web = "4.1.0"
chrono = { version = "0.4.19", features = ["serde"]}
config = { version = "0.13.1", default-features = false, features = ["yaml"] }
secrecy = { version = "0.8.0", features = ["serde"] }
serde = "1.0.138"
serde-aux = "3.1.0"
serde_json = "1.0.82"
sqlx = { version = "0.6.0", default-features = false, features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate", "offline"] }
tokio = { version = "1.19.2", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.35"
tracing-actix-web = "0.6.0"
tracing-bunyan-formatter = "0.3.3"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.14", features = ["registry", "env-filter"] }
uuid = { version = "1.1.2", features = ["v4", "serde"] }

[dev-dependencies]
once_cell = "1.13.0"
reqwest = "0.11.11"
